<resources>
    <string name="app_name">Shop Assist</string>
    <string name="title_loyalty_cards">Loyalty Cards</string>
    <string name="title_receipts">Receipts</string>
    <string name="title_profile">Profile</string>
    <string name="title_log_in">Sign In</string>
    <string name="title_receipt_form">Add new receipt</string>
    <string name="title_loyalty_card_form">Add new loyalty card</string>
    <string name="title_loyalty_card_edit_form">Edit loyalty card</string>
    <string name="title_receipt_preview">Receipt Preview</string>
    <string name="title_receipt_edit_form">Edit receipt</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="dont_have_an_account">Don\'t have an account yet? Create one!</string>
    <string name="settings">Settings</string>
    <string name="change_profile_info">Profile\'s info</string>
    <string name="rate_us">Rate us</string>
    <string name="about">About us</string>
    <string name="licence">Licence</string>
    <string name="log_out">Log out</string>
    <string name="loyalty_cards_bottom_sheet_dialog_scan_card">You can scan your loyalty card now</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="loyalty_card_title">Loyalty card title</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="return_text">Return</string>
    <string name="warranty">Warranty</string>
    <string name="preference_token">com.lgorczynski.shopassist.log_in.token</string>
    <string name="token">Token</string>
    <string name="title">Title</string>
    <string name="shop_name">Shop</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="purchase_cost">Purchase Cost</string>
    <string name="return_to">Return to</string>
    <string name="print_receipt">Print receipt</string>
    <string name="share_setting_title">Share loyalty card with</string>
    <string name="new_username">New username</string>
    <string name="profile_change_username_title">Change your username</string>
    <string name="new_email">New email</string>
    <string name="change">Change</string>
    <string name="change_username">Change username</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="profile_change_email_title">Change your email</string>
    <string name="profile_change_password_title">Change your password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="email_is">Email:</string>
    <string name="username_is">Username:</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">Looks like you don\'t have Internet connection. Please check your Internet connection and try again</string>
    <string name="no_server_connection">Looks like our server is not running. Please try again later</string>
    <string name="no_loyalty_cards">You don\'t have any loyalty cards yet</string>
    <string name="no_receipts">You don\'t have any receipts yet</string>
    <string name="download_receipts_local_copy">Create a local copy of all the receipt scans</string>
    <string name="text_about_loyalty_cards">Shop Assist is an app that allows you to store all your loyalty cards in one place. It slims down your wallet and let\'s you do your shopping without concerns that you\'ll miss your discounts!</string>
    <string name="text_about_receipts">Shop Assist also provides you opportunity to store your receipts for later use such as return purchased items, warranty, receipt lotteries. Your receipts will never come fade!</string>
    <string name="text_licence">Copyright \u00A9 2020 Shop Assist\n\n
    This product is protected by copyright and distributed under licenses restricting copying, distribution and decompilation.\n\n
        External libraries:\n\n
    https://github.com/square/picasso\n\n
    Copyright 2013 Square, Inc.\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

   http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\n
    https://github.com/journeyapps/zxing-android-embedded\n\n
    Copyright \u00A9 2012-2018 ZXing authors, Journey Mobile\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

    http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\n
    https://github.com/RedApparat/Fotoapparat\n\n
    Copyright 2017 Fotoapparat\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

    http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\n
    https://github.com/hdodenhof/CircleImageView\n\n
    Copyright 2014 - 2020 Henning Dodenhof\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

    http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\n
    https://github.com/square/retrofit\n\n
    Copyright 2013 Square, Inc.\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

   http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\n
    https://github.com/square/okhttp\n\n
    Copyright 2019 Square, Inc.\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

   http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\n
    </string>
</resources>
