<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/logInFragment">

    <fragment
        android:id="@+id/navigation_loyalty_cards"
        android:name="com.lgorczynski.shopassist.ui.loyalty_cards.LoyaltyCardsFragment"
        android:label="@string/title_loyalty_cards"
        tools:layout="@layout/fragment_loyalty_cards" >
        <action
            android:id="@+id/action_navigation_loyalty_cards_to_loyaltyCardFormFragment"
            app:destination="@id/loyaltyCardFormFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_loyalty_cards_to_loyaltyCardEditFormFragment"
            app:destination="@id/loyaltyCardEditFormFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_receipts"
        android:name="com.lgorczynski.shopassist.ui.receipts.ReceiptsFragment"
        android:label="@string/title_receipts"
        tools:layout="@layout/fragment_receipts" >
        <action
            android:id="@+id/action_navigation_receipts_to_receiptFormFragment"
            app:destination="@id/receiptFormFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_receipts_to_receiptPreviewFragment"
            app:destination="@id/receiptPreviewFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_receipts_to_receiptEditFormFragment"
            app:destination="@id/receiptEditFormFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.lgorczynski.shopassist.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_logInFragment"
            app:destination="@id/logInFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_profile_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_profile_to_licenceFragment"
            app:destination="@id/licenceFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/logInFragment"
        android:name="com.lgorczynski.shopassist.ui.log_in.LogInFragment"
        android:label="@string/title_log_in"
        tools:layout="@layout/fragment_log_in" >
        <action
            android:id="@+id/action_logInFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_logInFragment_to_navigation_home"
            app:destination="@id/navigation_loyalty_cards"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.lgorczynski.shopassist.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_navigation_loyalty_cards"
            app:destination="@id/navigation_loyalty_cards"
            app:popUpTo="@+id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.lgorczynski.shopassist.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/licenceFragment"
        android:name="com.lgorczynski.shopassist.ui.licence.LicenceFragment"
        android:label="@string/licence"
        tools:layout="@layout/fragment_licence" />
    <fragment
        android:id="@+id/loyaltyCardFormFragment"
        android:name="com.lgorczynski.shopassist.ui.loyalty_cards.LoyaltyCardFormFragment"
        android:label="@string/title_loyalty_card_form"
        tools:layout="@layout/fragment_loyalty_card_form" />
    <fragment
        android:id="@+id/receiptFormFragment"
        android:name="com.lgorczynski.shopassist.ui.receipts.ReceiptFormFragment"
        android:label="@string/title_receipt_form"
        tools:layout="@layout/fragment_receipt_form" />
    <fragment
        android:id="@+id/loyaltyCardEditFormFragment"
        android:name="com.lgorczynski.shopassist.ui.loyalty_cards.LoyaltyCardEditFormFragment"
        android:label="@string/title_loyalty_card_edit_form" />
    <fragment
        android:id="@+id/receiptPreviewFragment"
        android:name="com.lgorczynski.shopassist.ui.receipts.ReceiptPreviewFragment"
        android:label="@string/title_receipt_preview"
        tools:layout="@layout/fragment_receipt_form" />
    <fragment
        android:id="@+id/receiptEditFormFragment"
        android:name="com.lgorczynski.shopassist.ui.receipts.ReceiptEditFormFragment"
        android:label="@string/title_receipt_edit_form" />
</navigation>