<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loyalty_card_form_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/sym_def_app_icon"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/loyalty_card_form_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="18sp"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/loyalty_card_form_card_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:srcCompat="@android:drawable/sym_def_app_icon"
                android:layout_marginLeft="16dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/loyalty_card_form_from_camera_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_confirm_button"
                    android:text="@string/camera"
                    android:textColor="@android:color/primary_text_dark" />

                <Button
                    android:id="@+id/loyalty_card_form_from_gallery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_confirm_button"
                    android:text="@string/gallery"
                    android:textColor="@android:color/primary_text_dark" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/loyalty_card_form_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/loyalty_card_title"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/loyalty_card_form_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_confirm_button"
            android:text="@string/submit"
            android:textColor="@android:color/primary_text_dark"
            android:layout_margin="16dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>